Anlegen eines neuen Nutzers

--- a/Projekt/OnlineFerries/WebContent/auswahlKundentyp.xhtml
+++ b/Projekt/OnlineFerries/WebContent/auswahlKundentyp.xhtml
@@ -74,7 +74,7 @@
 	<h:panelGrid columns="3">
 		<h:form>
 			<h:outputText value="#{msg.onlineferries_sel_lbl_next1}"/><h:outputText value = "  "/>
-			<h:commandButton action="#{reservationHandler.registration}" value="#{msg.onlineferries_sel_next1}"/>			
+			<h:button outcome="neuerKunde.xhtml" value="#{msg.onlineferries_sel_next1}" />
 		</h:form>
 		<h:form>
 			<h:outputText value="#{msg.onlineferries_sel_lbl_next2}"/><h:outputText value = "  "/>
