Keine Lust mehr auf Java Server Faces

--- a/Projekt/OnlineFerries/WebContent/changeReservation.xhtml
+++ b/Projekt/OnlineFerries/WebContent/changeReservation.xhtml
@@ -65,16 +65,16 @@
 					<h:outputLabel value = ""/><h:outputLabel value = "#{msg.onlineferries_res1_lblPrice}"/><h:outputLabel value = "#{msg.onlineferries_res1_lblCount}"/>
 	
 					<h:outputLabel value = "#{msg.onlineferries_res1_lblCars}"/>
-					<h:outputLabel id = "carPrice" value = "#{reservationsHandler.reservation.trip.carPrice}">
+					<h:outputLabel id = "carPrice" value = "#{reservationsHandler.resView.trip.carPrice}">
 						<f:convertNumber type="currency" currencySymbol = "EUR"/>
 					</h:outputLabel>
 					<h:inputText id="cars" value="#{reservationsHandler.resView.cars}" required ="true" />
 
 					<h:outputLabel value = "#{msg.onlineferries_res1_lblTravellers}"/>	
-					<h:outputLabel id = "passengerPrice" value = "#{reservationsHandler.reservation.trip.passengerPrice}">
+					<h:outputLabel id = "passengerPrice" value = "#{reservationsHandler.resView.trip.passengerPrice}">
 						<f:convertNumber type="currency" currencySymbol = "EUR"/>
 					</h:outputLabel>
-					<h:selectOneListbox id="travellers" value="#{reservationsHandler.resView.travellerNames}" size="1"
+					<h:selectOneListbox id="travellers" value="#{reservationsHandler.countTravellers}" size="1"
 						onchange="this.form.submit()" immediate="true" valueChangeListener = "#{reservationHandler.changeTraveller}">
 						<f:selectItems value="#{reservationHandler.travellerValues}"/>
 					</h:selectOneListbox>						
