--- a/Projekt/OnlineFerries/WebContent/reservationList.xhtml
+++ b/Projekt/OnlineFerries/WebContent/reservationList.xhtml
@@ -44,7 +44,7 @@
 		
 		<div class="col-9">
 
-			<h1>ï¿½bersicht aller Reservierungen</h1>
+			<h1>Übersicht aller Reservierungen</h1>
 			
 			<h:form>
 			
@@ -91,7 +91,7 @@
 					</h:dataTable>
 				</h:column>	
 				<h:column>
-					<h:commandButton action="#{reservationsHandler.changeReservation(reservations.reservation_id)}" value="ï¿½ndern"/>
+					<h:commandButton action="#{reservationsHandler.changeReservation(reservations.reservation_id)}" value="Ändern"/>
 				</h:column>
 			</h:dataTable>
 			</h:form>
